fix(EV-12456): scratchpad tool overlaps context menu (#8152)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2191,3 +2191,7 @@ div[class*="_pendo"] button {
 .picker-dialog-bg {
   z-index: 1003 !important;
 }
+
+.pdfContextMenuDocBased {
+  z-index: 1001;
+}
